<resources>
    <string name="app_name">Registration Form</string>
    <string name="welcome">Welcome to Adventure Learning Club!</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone No.</string>
</resources>